# oracle-sol

./: .gitignore  DEPLOY.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
scripts/: export_weights.py
src/oracle_sol/: __init__.py  api.py
src/oracle_sol/cli/: __init__.py  app.py  display.py
src/oracle_sol/core/: __init__.py  predictor.py
src/oracle_sol/data/: __init__.py  parsers.py  references.py
src/oracle_sol/weights/: .gitkeep  mlp_head.pt
tests/: test_core.py
web/: app.jsx
