[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "oracle-sol"
version = "0.6.0"
description = "Protein solubility prediction for the modern design pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Asutosh Rath", email = "asutosh@oracle-sol.dev"},
]
keywords = ["protein", "solubility", "bioinformatics", "ESM2", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "biopython>=1.81",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
gpu = ["accelerate>=0.20.0"]

[project.scripts]
oracle = "oracle_sol.cli.app:app"

[project.urls]
Homepage = "https://github.com/61-Keys/oracle-sol"
Documentation = "https://github.com/61-Keys/oracle-sol#readme"
Repository = "https://github.com/61-Keys/oracle-sol"
Issues = "https://github.com/61-Keys/oracle-sol/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
