[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "oracle-sol"
version = "0.6.0"
description = "Predict E. coli protein solubility from sequence using ESM2-650M"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Asutosh Rath"},
]
keywords = ["protein", "solubility", "bioinformatics", "ESM2", "machine-learning", "protein-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
gpu = ["accelerate>=0.20.0"]
all = ["pandas>=2.0.0", "biopython>=1.81"]

[project.scripts]
oracle = "oracle_sol.cli.app:app"

[project.urls]
Homepage = "https://github.com/61-Keys/oracle-sol"
Repository = "https://github.com/61-Keys/oracle-sol"
Issues = "https://github.com/61-Keys/oracle-sol/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oracle_sol = ["weights/*.pt"]

[tool.ruff]
line-length = 100
target-version = "py310"
